[tool.poetry]
name = "gradio-experiments-utils"
version = "0.1.0"
description = "An almost unnecessary utilities package for gradio-experiments."
authors = ["Anirban Basu <anirbanbasu@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/anirbanbasu/gradio-experiments"
keywords = ["gradio", "gradio-experiments", "utilities", "ui", "web"]
packages = [
    { include = "src" }
]
exclude = [ "src/app.py", "src/data.py", "src/utils.py" ]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
