[project]
name = "gradio-experiments"
version = "0.1.0"
description = "Experiments with Gradio."
readme = "README.md"
authors = [
    { name = "Anirban Basu", email = "anirbanbasu@users.noreply.github.com" }
]
repository = "https://github.com/anirbanbasu/gradio-experiments"
keywords = ["gradio", "gradio-experiments", "utilities", "ui", "web"]
requires-python = ">=3.12"
dependencies = [
    "asyncer>=0.0.8",
    "gradio>=5.38.0",
    "kagglehub>=0.3.12",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "randomname>=0.2.1",
]

[project.scripts]
gre = "gradio_experiments.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "icecream>=2.1.5",
    "pre-commit>=4.2.0",
]
test = [
    "pytest>=8.4.1",
]
